bug fix adaptacao em algumas classes implementacao de metodos de seguranca para teste em telas htlm